--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Board Game</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -20,10 +20,11 @@
             <h1>Candidate Name</h1>
         </header>
 
+        <div onclick="myFunction()">
+            <button class="drop-button"></button>
+            <div class="drop-text">Dropdown with Search</div>
+        </div>
         <div class="dropdown">
-            <button onclick="myFunction()" class="drop-button">
-                <div class="drop-text">Dropdown with Search</div>
-            </button>
             <div id="myDropdown" class="dropdown-content">
                 <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
                 <a href="#">Option 1</a>
@@ -31,7 +32,14 @@
             </div>
         </div>
 
-        <input type="text" id="datepicker">
+
+        <div class="datepicker"></div>
+        <div id="datepicker-calendar">Calendar
+            <div class="datepicker-format">(dd-mm-yyyy)</div>
+        </div>
+
+        <input onclick="hideDefault()"  type="text" id="datepicker">
+
 
 
         <main>
