--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Candidate Name</h1>
         </header>
 
-        <div onclick="myFunction()">
+        <div onclick="toggleDrop()">
             <button class="drop-button"></button>
             <div class="drop-text">Dropdown with Search</div>
         </div>
@@ -40,16 +40,9 @@
 
         <input onclick="hideDefault()"  type="text" id="datepicker">
 
-
-
-        <main>
-
-
-
-
-<!--            <section class="checkerboard"></section>-->
-
-        </main>
+        <div class="checkerboard"></div>
+        <div id="tilesOdd"></div>
+        <div id="tilesEven"></div>
 
     </div>
 
