--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div onclick="toggleDrop()">
             <button class="drop-button"></button>
             <div class="drop-text">Dropdown with Search</div>
+            <div class="arrow-down"></div>
         </div>
         <div class="dropdown">
             <div id="myDropdown" class="dropdown-content">
@@ -31,7 +32,6 @@
                 <a href="#">Option 2</a>
             </div>
         </div>
-
 
         <div class="datepicker"></div>
         <div id="datepicker-calendar">Calendar
@@ -43,7 +43,16 @@
         <div class="checkerboard"></div>
         <div id="tilesOdd"></div>
         <div id="tilesEven"></div>
+        <div id="yellowCheckers"></div>
+        <div id="orangeCheckers"></div>
 
+        <div onclick="startGame()" class="start">
+            <div class="start-box"></div>
+            <div class="start-play">Start Play</div>
+        </div>
+
+        <footer></footer>
+        <h2>Copyright Atos India - 2023</h2>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
