--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-
     <div class="container">
         <header>
             <h1>Candidate Name</h1>
@@ -46,7 +44,7 @@
         <div id="yellowCheckers"></div>
         <div id="orangeCheckers"></div>
 
-        <div onclick="startGame()" class="start">
+        <div onclick="startGame()" id="start">
             <div class="start-box"></div>
             <div class="start-play">Start Play</div>
         </div>
