--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
         <div class="dropdown">
             <div id="myDropdown" class="dropdown-content">
-                <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-                <a href="#">Option 1</a>
-                <a href="#">Option 2</a>
+                <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction(); toggleDrop()">
+                <a href="#" onclick="toggleDrop()">Option 1</a>
+                <a href="#" onclick="toggleDrop()">Option 2</a>
             </div>
         </div>
 
